[tool.poetry]
name = "handbook_gen"
version = "0.1.0"
authors = []
description = "API reference summary generator for the Yagna handbook"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
Mako = "^1.1.4"
Markdown = "^3.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
