[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "yajsapi-integration-tests"
version = "0.1.0"
description = "Integration tests for yajsapi"
authors = ["GolemFactory <contact@golem.network>"]
license = "LGPL-3.0-or-later"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing"
]
repository = "https://github.com/golemfactory/yajsapi"
documentation = "https://handbook.golem.network/yajsapi/"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.0"
pytest = "^6.2"
pytest-asyncio = "^0.14"
pytest-rerunfailures = "^10.1"
goth = "0.13"
pexpect = "^4.8.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.782"
poethepoet = "^0.8.0"

[tool.poe.tasks]
codestyle = "black --check --diff ."
goth-assets = "python -m goth create-assets assets"
goth-tests = "pytest -svx . --config-override docker-compose.build-environment.release-tag=pre-rel-v0.12.0-rc2 --ssh-verify-connection --reruns 3 --only-rerun AssertionError --only-rerun TimeoutError --only-rerun goth.runner.exceptions.TemporalAssertionError --only-rerun urllib.error.URLError --only-rerun goth.runner.exceptions.CommandError"
typecheck = "mypy ."
